2013-02-01  Gavin Salam  <gavin.salam@cern.ch>

	* scripts/internal/release-fjcontrib.sh: 
	contents now lives in a separate directory

	* scripts/update-contribs.sh:
	no longer query if the contrib isn't yet there.

2013-02-01  Gregory Soyez  <soyez@fastjet.fr>

	* scripts/internal/package.sh: (well... mostly Matteo)
	added a simple script to package a tarball

2013-01-31  Gregory Soyez  <soyez@fastjet.fr>

	* scripts/internal/release-fjcontrib.sh:
	  . removed unneeded developer and svn-users files from the
	    tarball
	  . fixed a few typos and trivial bugs
	  . check which fastjet-config to use when running tests
	  . the script now upload the tarball and the relevant info for
	    the webpage update

	* scripts/internal/generate-html-contents.pl:
	played with CSS styles so as to get a result that looks rather
	close to what is on the FastJet tools page

	* scripts/internal/common.sh:
	* scripts/update-contribs.sh:
	passed the default answer to get_yesno_answer as an argument
	rather than a pre-defined variable

	* scripts/internal/release-fjcontrib.sh:
	added a script to release fj-contrib
	it includes all the contrib in contribs.svn

	* configure:
	* README:
	used --fastjet-config=... rather than --fjconfig=... to specify
	the 'fastjet-config' file to use

	* scripts/update-contribs.sh:
	* scripts/internal/common.sh:
	allowed to run
	  update-contribs.sh --force
	which will answer yes to all "yesno" questions asked

	* VERSION:          *** ADDED ***
	added a VERSION file

	* scripts/internal/switch-to-version.sh:
	* scripts/register-new-contrib.sh:
	* scripts/new-contrib-from-template.sh:
	* scripts/release-contrib.sh:
	removed potential trailing /


2013-01-31  Gavin Salam  <gavin.salam@cern.ch> + Gregory

	* DEVEL-GUIDELINES:  *** ADDED ***
	* README
	tried to make these a little more compact.

2013-01-31  Gregory Soyez  <soyez@fastjet.fr>

	* scripts/make-release.sh -> scripts/release-contrib.sh:
	renamed for more consistency
